syntax = "proto3";
package jarviscrawlercore;
option go_package = "github/zhs007/jccclient";

enum Hao6vResType {
    H6VRT_UNKNOW = 0;
    H6VRT_ED2K = 1;
    H6VRT_MAGNET = 2;
    H6VRT_LIVE = 3;
    H6VRT_BAIGUPAN = 4;
    H6VRT_XUNLEI = 5;
}

// Hao6v Resource infomation
message Hao6vResInfo {
    Hao6vResType type = 1;
    string url = 2;
    string name = 3;
    string code = 4;
}

// Hao6v Node
message Hao6vNode {
    // fullname
    string fullname = 1;
    // resource id
    string resid = 2;
    // lst
    repeated Hao6vResInfo lst = 3;
    // 片名
    repeated string title = 4;
    // 导演
    repeated string director = 5;
    // url
    string url = 6;
    // cover
    string cover = 7;
    // 导演
    string fulldirector = 8;
}

// Hao6vMode - hao6v mode
enum Hao6vMode {
    // H6VM_NEWPAGE - new page
    H6VM_NEWPAGE = 0;
    // H6VM_RESPAGE - res page
    H6VM_RESPAGE = 1;
}

// Hao6vNewPage - hao6v new page
message Hao6vNewPage {
    repeated Hao6vNode lst = 1;
}

// RequestHao6v - request hao6v
message RequestHao6v {
    Hao6vMode mode = 1;
    string url = 2;
}

// ReplyHao6v - reply hao6v
message ReplyHao6v {
    Hao6vMode mode = 1;

    oneof reply {
        Hao6vNewPage newpage = 100;
        Hao6vNode res = 101;
    }
}